--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GLBB</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="app.css" />
   </head>
@@ -26,9 +26,11 @@
         ></span>
       </p>
       <p>
-        MoveX :<input type="text" id="dxpos_input" placeholder="MoveX" /><span
-          id="dxpos"
-        ></span>
+        MoveX :<input
+          type="text"
+          id="dxpos_input"
+          placeholder="MoveX"
+        /><span id="dxpos"></span>
       </p>
       <p>
         MoveY :<input type="text" id="moveY_input" placeholder="MoveY" /><span
@@ -36,9 +38,14 @@
         ></span>
       </p>
       <p>
-        friction :
-        <input type="text" id="moveY_input" placeholder="MoveY" />
+        friction : <input type="text" id="friction_input" placeholder="friction"
+        />
         <span id="friction"></span>
+      </p>
+      <p>
+        Elastisitas :
+        <input type="text" id="elestisitas_input" placeholder="Elastisitas" value ="1"/>
+        <span id="elestisitas"></span>
       </p>
     </div>
   </body>
